--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,14 @@
     <string name="app_name">BlackBerryJam</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
-
+    <string name="make_photo">Take a photo</string>
+    <string name="send">Send</string>
+    <string name="error">Error: </string>
+    <string name="app_error">Application error</string>
+    <string name="back">Back</string>
+    <string name="client_id">Your Client Id</string>
+    <string name="client_api_key">Your API Key</string>
+    <string name="response">Server Response:</string>
+    <string name="wait_message">Please wait…</string>
+    <string name="not_connected">No internet connection!</string>
 </resources>
