--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">BlackBerryJam</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Shoploox</string>
+    <string name="hello_world">My balls are on fire!</string>
     <string name="menu_settings">Settings</string>
     <string name="make_photo">Take a photo</string>
     <string name="send">Send</string>
