--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name">Shoploox</string>
     <string name="hello_world">My balls are on fire!</string>
     <string name="menu_settings">Settings</string>
-    <string name="make_photo">Take a photo</string>
+    <string name="make_photo">Add</string>
     <string name="send">Send</string>
     <string name="error">Error: </string>
     <string name="app_error">Application error</string>
